# Alt-Denoiser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: DeepFilterNetProcessor.cpp  DeepFilterNetProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
libs/Include/: df.h
